remove dark mode detection to ensure correct printing

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,6 @@
 
 html {
   height: 100%;
-  color-scheme: dark light;
 }
 
 .pagebreak {
